--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
-    "uuidv4": "^6.2.13",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "zustand": "^4.0.0-rc.1"
   },
@@ -48,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.4"
   }
 }
