--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.5",
     "firebase": "^9.8.3",
     "immer": "^9.0.15",
+    "invariant": "^2.2.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "react": "^18.2.0",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/invariant": "^2.2.35",
     "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4"
   }
